Fix link contrast on light theme

--- a/_assets/css/_lib.scss
+++ b/_assets/css/_lib.scss
@@ -1,7 +1,7 @@
 $color-background: #f4ecd8;
 $color-background-secondary: #fff;
 $color-border: #aaa;
-$color-link: #d3551b;
+$color-link: #ca2800;
 $color-text-primary: #434343;
 $color-text-secondary: #636568;
 $color-text-tertiary: #565757;
